# snip

./: .gitignore  .prettierrc  API.md  LICENCE.md  README.md  bun.lockb  initdb.sql  netlify.toml  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
.github/: funding.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: .example.env  Cargo.toml  _util.rs  user.rs
api/snip_delete/: Cargo.toml
api/snip_delete/src/: main.rs
api/snip_edit/: Cargo.toml
api/snip_edit/src/: main.rs
api/snip_get/: .example.env  Cargo.toml
api/snip_get/src/: main.rs
api/snip_new/: Cargo.toml
api/snip_new/src/: main.rs
api/user_snips/: Cargo.toml
api/user_snips/src/: main.rs
api/users/: snips.rs
apps/client/: bun.lockb  package.json
bot/: Cargo.toml  README.md  config.json
bot/example/: .env.example  Cargo.toml  sqlx-data.json
bot/example/migrations/: 20200823142735_initial_schema.sql  20200909100410_logger_tables.sql
bot/example/src/: commands.rs  handler.rs  hooks.rs  logger.rs  main.rs  tasks.rs  utils.rs
bot/example/src/commands/: all_channels.rs  help.rs  moderators.rs  specific_channel.rs
bot/example/src/commands/all_channels/: codeblock.rs  google.rs  learnprogramming.rs  questions.rs  thanks.rs
bot/example/src/commands/moderators/: config.rs  delete.rs  prep_ban.rs
bot/example/src/commands/specific_channel/: github.rs  me.rs  top.rs
bot/src/: api.rs  bot.rs  main.rs
bot/src/commands/: help.rs  mod.rs  snip.rs
cli/: Cargo.toml  README.md
cli/src/: api.rs  cli.rs  languages.rs  main.rs  models.rs
client/: .prettierrc  README.md  bun.lockb  package.json  tailwind.config.mjs  tailwind.config.ts  tsconfig.json  wrangler.toml
client/src/: global.css
components/: Editor.tsx  Footer.tsx  Nav.tsx  Options.tsx  Palette.tsx  PasswordModal.tsx  Spinner.tsx  User.tsx  Wrapper.tsx
components/Palette/: Edit.tsx  Main.tsx  User.tsx  View.tsx
data/: snips.ts
hooks/: useKeyPress.ts
lib/: UserContext.tsx  courier.ts  gmail.ts  languages.ts  supabase.ts  theme.ts
pages/: [id].tsx  _app.tsx  _document.tsx  index.tsx  snips.tsx
pages/edit/: [id].tsx
pages/user/: [id].tsx
public/: robots.txt  sitemap.xml
server/: .env  Cargo.toml  README.md  fly.toml
server/snip/: Cargo.toml
server/src/: main.rs  snip.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Editor.tsx  Footer.tsx  (+2 more)
styles/: globals.css  kmenu.css  toast.ts
supabase/: config.toml
typings/: env.d.ts  expires.ts  gmail.ts  snip.ts  supabase.ts
(+35 files in other folders)
