[package]
name = "index"
version = "1.0.0"
authors = ["Ibrahim Hisham <hi.ibra@pm.me>", "Harsh Singh <hi.harsh@pm.me>"]
edition = "2018"

[dependencies]
http = "0.1"
vercel_lambda = "*"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
regex = "1.6"
once_cell = "1.13.0"

[dev-dependencies]
rstest = "0.15.0"

[lib]
name = "util"
path = "_util.rs"

[[bin]]
name = "user"
path = "user.rs"
