[package]
name = "index"
version = "1.0.0"
authors = [
  "Ibrahim Hisham <hi.ibra@pm.me>",
  "Harsh Singh <hi.harsh@pm.me>"
]
edition = "2021"

[dependencies]
vercel_lambda = "*"
dotenv = "0.15.0"
http = "0.1"
postgrest = "1.0"
serde_json = "1.0"

  [dependencies.reqwest]
  version = "0.11"
  features = [ "blocking", "json" ]

[dev-dependencies]
rstest = "0.15.0"

[[bin]]
name = "snips"
path = "P:\\Websites\\snip\\api\\users\\snips.rs"
